--- a/DameDoy/templates/html/materiales.html
+++ b/DameDoy/templates/html/materiales.html
@@ -114,7 +114,9 @@
                 </div>
                 <div class="precio-autor">
                     <span class="precio">$ {{ material.precio }}</span>
-                    <span class="autor">{{ material.autor.username }}</span>
+                    <!-- <span class="autor">{{ material.autor.username }}</span> -->
+                    <!-- <span class="autor">{{ material.autor.first_name }}</span> -->
+                    <span class="autor">{{ material.autor.first_name|default:material.autor.username }}</span>
                 </div>
             </div>
         </article>
