--- a/DameDoy/templates/html/base.html
+++ b/DameDoy/templates/html/base.html
@@ -70,6 +70,11 @@
                     </a>
                 </li>
                 <li>
+                    <a href="{% url 'mis_materiales' %}" class="sidebar-link {% if request.resolver_match.url_name == 'mis_materiales' %}active{% endif %}">
+                        <i class="fas fa-folder-open"></i>
+                        <span class="sidebar-text">Mis materiales</span>
+                    </a>
+                <li>
                     <a href="{% url 'lista_materiales' %}" class="sidebar-link {% if request.resolver_match.url_name == 'lista_materiales' %}active{% endif %}">
                         <i class="fas fa-book"></i>
                         <span class="sidebar-text">Materiales</span>
